--- a/services/customiser/code/pom.xml
+++ b/services/customiser/code/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.tinytelly.Purpose</groupId>
+    <groupId>com.tinytelly.purpose</groupId>
     <artifactId>purpose</artifactId>
-    <version>0.1</version>
+    <version>0.1-SNAPSHOT</version>
 
 
     <dependencies>
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>20.0</version>
+            <version>22.0</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
