--- a/services/customiser/code/pom.xml
+++ b/services/customiser/code/pom.xml
@@ -8,7 +8,11 @@
     <artifactId>purpose</artifactId>
     <version>0.1-SNAPSHOT</version>
 
-
+    <properties>
+         <maven.compiler.source>1.8</maven.compiler.source>
+         <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+         
     <dependencies>
          <dependency>
              <groupId>com.google.code.gson</groupId>
